objects/mcsocsel10__SocialInsightsPersona__x.object
<CustomObject>
    <externalDataSource>mcsocsel10__Social_Insights</externalDataSource>
    <externalName>SocialInsightsPersona</externalName>
    <fields>
        <fullName>mcsocsel10__Bio__c</fullName>
        <description>Bio</description>
        <externalDeveloperName>Bio</externalDeveloperName>
        <label>Bio</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mcsocsel10__ExternalAuthorId__c</fullName>
        <description>Provider External Id</description>
        <externalDeveloperName>ExternalAuthorId</externalDeveloperName>
        <label>Provider External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcsocsel10__ExternalPictureURL__c</fullName>
        <externalDeveloperName>ExternalPictureURL</externalDeveloperName>
        <label>Provider External Picture URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>mcsocsel10__Followers__c</fullName>
        <externalDeveloperName>Followers</externalDeveloperName>
        <label>Followers</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mcsocsel10__Following__c</fullName>
        <externalDeveloperName>Following</externalDeveloperName>
        <label>Following</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mcsocsel10__InfluencerScore__c</fullName>
        <externalDeveloperName>InfluencerScore</externalDeveloperName>
        <label>Influencer Score</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mcsocsel10__NumberOfTweets__c</fullName>
        <externalDeveloperName>NumberOfTweets</externalDeveloperName>
        <label>Number Of Tweets</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mcsocsel10__RealName__c</fullName>
        <description>Real Name</description>
        <externalDeveloperName>RealName</externalDeveloperName>
        <label>Real Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcsocsel10__SocialHandle__c</fullName>
        <description>Social Handle</description>
        <externalDeveloperName>SocialHandle</externalDeveloperName>
        <label>Social Handle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcsocsel10__SocialNetwork__c</fullName>
        <description>Social Network</description>
        <externalDeveloperName>SocialNetwork</externalDeveloperName>
        <label>Social Network</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcsocsel10__Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Verified</description>
        <externalDeveloperName>Verified</externalDeveloperName>
        <label>Verified</label>
        <type>Checkbox</type>
    </fields>
    <label>Social Intelligence Persona</label>
    <pluralLabel>Social Intelligence Persona</pluralLabel>
</CustomObject>